[gd_scene load_steps=6 format=2]

[ext_resource path="res://Env.gd" type="Script" id=1]
[ext_resource path="res://Characters/Payasito.tscn" type="PackedScene" id=2]
[ext_resource path="res://upwards_arrow.png" type="Texture" id=3]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 350, 10 )

[node name="Env" type="Node2D"]
script = ExtResource( 1 )

[node name="Payasito" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 1140 )

[node name="TiltIndicator" type="Sprite" parent="."]
position = Vector2( 360, 80 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 455.897
margin_top = 112.323
margin_right = 495.897
margin_bottom = 126.323
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Margin"]
polygon = PoolVector2Array( 0, 0, 0, 1280, 720, 1280, 720, 0, 712, 0, 712, 1272, 8, 1272, 8, 0 )

[node name="Obstacle" parent="." instance=ExtResource( 4 )]
position = Vector2( 358.829, 16 )

[node name="ObstacleDeleter" type="Area2D" parent="."]
position = Vector2( 360, 1200 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDeleter"]
shape = SubResource( 1 )

[node name="ObstacleSpawner" type="Node2D" parent="."]

[node name="Start" type="Position2D" parent="ObstacleSpawner"]
position = Vector2( 64, 64 )

[node name="End" type="Position2D" parent="ObstacleSpawner"]
position = Vector2( 640, 64 )
[connection signal="body_entered" from="ObstacleDeleter" to="." method="_on_ObstacleDeleter_body_entered"]
